force-app/main/default/objects/Subscriber__c/fields/Data_Used__c.field-meta.xml
<CustomField>
    <fullName>Data_Used__c</fullName>
    <description>A measure of the data used by the subscriber in GB</description>
    <label>Data Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>