force-app/main/default/objects/Subscriber__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>subscriber email address</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>