force-app/main/default/objects/Subscriber__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>