force-app/main/default/objects/Subscriber__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>subscriber status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
            </value>
            <value>
                <fullName>DISCONNECTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>